Mon Jul  5 20:11:01 1999  Tim Janik  <timj@gtk.org>

	* gnome-canvas.[hc]: added gnome_canvas_get_color_pixel() to retrive
	the pixel value for a GdkColor.

	* gnome-canvas-line.c:
	* gnome-canvas-text.c:
        * gnome-canvas-polygon.c:
        * gnome-canvas-rect-ellipse.c: support ::fill_color, ::fill_color_rgba,
	::fill_color_gdk, ::outline_color, ::outline_color_rgba and
	::outline_color_gdk for non-aa as for aa canvas. don't segfault upon
	NULL pointer passing, but assume no-fill and black in that case.
	always request an update on the canvas items if a color changed.
	keep the fill_color (sometimes fill_rgba) values uptodate, so
	querying *_color_rgba returns valid results.

1999-07-05  Miguel de Icaza  <miguel@gnu.org>

	* gnome-about.c: Make the inter-line skip, it is not required
	(descent+ascent has all the information we need).

1999-07-04  Miguel de Icaza  <miguel@gnu.org>

	* gnome-client.c: small fix for api docs.

	* gnome-canvas.h: Fixed names.

	* gnome-animator.h: Made the protypes use the same names.

	* gnome-about.c: Fixed inline api docs.

	* gnome-preferences.c: Fixed inline api docs.

1999-06-30  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.h: The last argument to gnome_icon_list_new()
	had effectively the same type as the one declared in the .c file,
	but it was inconsistently declared.  Fixed it.

1999-06-30  Cody Russell <bratsche@dfw.net>

	* gnome-animator.c: Added last line to while() loop in
	free_all_frames(). It was getting caught in an infinite loop in
	some circumstances when the GnomeAnimator object was destroyed
	before.

1999-06-29  Akira Higuchi <a-higuti@math.sci.hokudai.ac.jp>
	
	* gnome-icon-item.c (iti_edition_accept): Don't allocate
	iti->text if iti->editing is False. This fixes the bug #1311.
	
	* gnome-less.c: (gnome_less_set_fixed_font): Correct the default
	fontset pattern. A comma was missing.
	
1999-06-29    <jrb@redhat.com>

	* gnome-druid-page.c: Wrote more documentation.
